# PRH-1

./: PRH_1 - Copia.ipynb  PRH_1 - Copy.ipynb  PRH_1 - Current.ipynb  PRH_1_torch.ipynb  fingerprint.pb  hello.py  pyproject.toml  test.ipynb
ALFAsim/: alfaca.py  alfasdk.ipynb
Greitzer_Model/: Digraph.gv  PRH_1 - Copy.ipynb  PRH_1 - Current.ipynb  PRH_1.h5  PRH_1_torch.ipynb  import keras2onnx.py  lib.py  melhor_modelo.pth  prob+NN copy.ipynb  prob+NN.ipynb  pyproject.toml  saved-model.h5
bombas-subsep/: CGEOS_calibration_in_unisim.py  Composicao.txt  PR_calibration_in_unisim.py  PR_previuos.py  Reorder.py  caso unisim - aleatorio com atraso.py  caso_compressor_multi_init.py  caso_set_pump_1.py  caso_set_pump_2.py  caso_unisim.py  compression.py  compressor_class.py  connect_and_run_unisim.py  connect_subsep.py  create_alfasim_table.py  dados_map_pump_1.pkl  dados_map_pump_2  data_1  data_critical.csv  data_new_cobeq  data_new_cobeq_2  data_new_cobeq_4  data_new_cobeq_5  data_new_cobeq_final  envelopes_maps_pse_ne.pkl  envelopes_pse_ne.pkl  eos_database.py  eos_database_new.py  eos_database_new_resumed.py  fazendo_graficos.py  gc_eos.py  gc_eos_backup.py  hydrate_module.py  hydrate_validation.py  initial_test_dense_gas__compressor.py  initial_test_dense_gas_equilibrium.py  initial_test_dense_gas_hydrate_test.py  initial_test_dense_gas_hydrate_vap_a.py  linear_case_ann.py  lotka_volterra_data.npz  (+53 more)
model/: 0812.pth  model1111111111.pth  model22222222.pth  model_0212.pth  model_0312.pth  model_0412.pth  model_complete8k.pth  model_complete_4k.pth  model_plus_phi_2711.h5  (+2 more)
(+2741 files in other folders)
