[project]
name = "prh-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"

dependencies = [
    "alfasim-sdk>=2024.2",
    "casadi>=3.6.7",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "optuna>=4.0.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "torch>=2.5.1",
]
