[project]
name = "prh-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"

dependencies = [
    "alfasim-sdk>=2024.2",
    "casadi>=3.6.7",
    "cmake>=3.31.0.1",
    "ipykernel>=6.29.5",
    "keras2onnx>=1.7.0",
    "matplotlib>=3.9.2",
    "ninja>=1.11.1.1",
    "optuna>=4.0.0",
    "scikit-learn>=1.5.2",
    "scipy>=1.14.1",
    "tensorflow>=2.18.0",
    "tf2onnx>=1.16.1",
    "torch>=2.5.1",
]
